--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div>
 	</div>
 	<a class="chainsaw-link" href="animes/chainsaw man/chainsaw.html"></a>
-	<a class="attack-link" href="animes/spy x family/spy x family.html"></a>
+	<a class="attack-link" href="animes/Shingeki No Kyojin/shingeki no kyojin.html"></a>
 	<a class="jujutsu-link" href="animes/jujutsu kaisen/jujutsu kaisen.html"></a>
 	<a class="kimetsu-link" href="animes/kimetsu no yaiba/kimetsu no yaiba.html"></a>
 
@@ -422,7 +422,7 @@
 				<div class="aviso-rojo">
 					<p>
 					<B>AVISO IMPORTANTE</B>: Este sitio web esta en estado de prueba por el momento, no sabemos si continuara en el transcurso de algunos dias. Asi que agradecemos todo el apoyo que nos puedan dar para seguir brindandoles este servicio SIN FINES DE LUCRO. <B>A tu izquierda estan todas nuestras redes, si nos sigues ayudarias mucho.</B><br>
-					50 Animes se agregaran dentro de poco, siguenos en nuestras redes para que estes atento...
+					Mas Animes se agregaran cada semana, siguenos en nuestras redes para que estes atento...
 					</p>
 				</div>
 				<div class="aviso-azul">
