--- a/animes/Shingeki No Kyojin/shingeki no kyojin.html
+++ b/animes/Shingeki No Kyojin/shingeki no kyojin.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="description" content="Descargar Attack On Titan todas las temporadas en Español Latino FACIL, RAPIDO, GRATIS Y SIN ANUNCIOS, en HD Por Mediafire">
-	<meta name="keywords" content="Animes, Online, Descargar, Español Latino, Sin Anuncios, Gratis, Mediafire">
+	<meta name="keywords" content="Animes, Online, Descarga, Español Latino, Sin Anuncios, Gratis, Mediafire">
 	<meta name="robots" content="index, follow">
 	<meta name="author" content="Levi Corrales">
 	<meta name="date" content="2023-12-31">
