--- a/animes/Shingeki No Kyojin/shingeki no kyojin.html
+++ b/animes/Shingeki No Kyojin/shingeki no kyojin.html
@@ -14,7 +14,7 @@
 
 
 	<title>Descargar Attack On Titan HD | Español Latino</title>
-	<link rel="stylesheet" type="text/css" href="Shingeki no kyojin.css">
+	<link rel="stylesheet" type="text/css" href="Shingeki no kyojin todo.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="../../icons/css/iconset.css">
 	<link rel="stylesheet" type="text/css" href="../../icons2/css/fontello.css">
@@ -36,7 +36,7 @@
 			<h2><b>Attack On Titan</b></h2>
 			<p><b>2013</b></p>
 			<p>
-				La historia se desarrolla en un mundo ficticio en el que la humanidad esta al borde de la existincion a causa de unas criaturas humanoides llamadas <b>"titanes"</b>, lo que obliga a los supervivientes a refugiarse en tres enormes murallas. 
+				La Historia se desarrolla en un mundo ficticio en el que la humanidad esta al borde de la existincion a causa de unas criaturas humanoides llamadas <b>"titanes"</b>, lo que obliga a los supervivientes a refugiarse en tres enormes murallas. 
 				La trama gira en torno a <b>Eren Jeager</b> quien despues de perder a su madre a manos de los titanes, decide unirse al "ejercito de las murallas" junto a su hermana adoptiva <b>Mikasa Ackerman</b> y su mejor amigo <b>Armin Arlert</b> con el objetivo de vengar la muerte de su madre y destruir a los titanes.
 			</p>
 			<p><b>Genero:</b> Seinen/Accion, fantasia oscura, Postapocalíptico</p>
