--- a/animes/Shingeki No Kyojin/shingeki no kyojin.html
+++ b/animes/Shingeki No Kyojin/shingeki no kyojin.html
@@ -13,7 +13,7 @@
 	<meta property="og:type" content="website">
 
 
-	<title>Descargar Attack On Titan HD | Español Latino</title>
+	<title>Descargar Attack On Titan hd | Español Latino</title>
 	<link rel="stylesheet" type="text/css" href="Shingeki no kyojin 4.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="../../icons/css/iconset.css">
