--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta property="og:type" content="website">
 	
 	
-	<title>Full Anime | Descargar Animes en Español Latino por Mediafire</title>
+	<title>Full-Anime | Descargar Animes en Español Latino por Mediafire</title>
 	<link rel="stylesheet" type="text/css" href="css/full anime.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="icons/css/iconset.css">
@@ -41,7 +41,7 @@
 			</div>
 	</div>
 	<a class="chainsaw-link" href="animes/chainsaw man/chainsaw.html"></a>
-	<a class="attack-link" href="animes/Shingeki No Kyojin/shingeki no kyojin 4.html"></a>
+	<a class="attack-link" href="animes/Shingeki No Kyojin/shingeki no kyojin.html"></a>
 	<a class="jujutsu-link" href="animes/jujutsu kaisen/jujutsu kaisen.html"></a>
 	<a class="kimetsu-link" href="animes/kimetsu no yaiba/kimetsu no yaiba.html"></a>
 
