--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta property="og:type" content="website">
 	
 	
-	<title>Full-Anime | Descargar Animes en Español Latino por Mediafire</title>
+	<title>Full Anime | Descargar Animes en Español Latino por Mediafire</title>
 	<link rel="stylesheet" type="text/css" href="css/full anime.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="icons/css/iconset.css">
@@ -197,7 +197,7 @@
 
 				<button class="series" id="data-serie-39"><div class="img-ul"><img src="poster/jojos 3.jpg"></div><div class="text-ul">Jojos Bizarre Adventure</div></button>
 
-				<button class="series" id="data-serie-40"><div class="img-ul"><img src="poster/hellshing 1.jpg"></div><div class="text-ul">Hellsing</div></button>
+				<button class="series" id="data-serie-40"><div class="img-ul"><img src="poster/solo leveling 1.jpg"></div><div class="text-ul">Solo Leveling</div></button>
 
 				<button class="series" id="data-serie-41"><div class="img-ul"><img src="poster/arcane 1.jpg"></div><div class="text-ul">Arcane: League of legends</div></button>
 
@@ -355,7 +355,7 @@
 
 						<button class="series-responsive" id="responsive-data-serie-39"><div class="img-ul-responsive"><img src="poster/jojos 3.jpg"></div><div class="text-ul-responsive">Jojos Bizarre Adventure</div></button>
 
-						<button class="series-responsive" id="responsive-data-serie-40"><div class="img-ul-responsive"><img src="poster/hellshing 1.jpg"></div><div class="text-ul-responsive">Hellsing</div></button>
+						<button class="series-responsive" id="responsive-data-serie-40"><div class="img-ul-responsive"><img src="poster/solo leveling 1.jpg"></div><div class="text-ul-responsive">Solo Leveling</div></button>
 
 						<button class="series-responsive" id="responsive-data-serie-41"><div class="img-ul-responsive"><img src="poster/arcane 1.jpg"></div><div class="text-ul-responsive">Arcane: League of legends</div></button>
 
