--- a/animes/Shingeki No Kyojin/shingeki no kyojin.html
+++ b/animes/Shingeki No Kyojin/shingeki no kyojin.html
@@ -975,6 +975,6 @@
 	</footer>
 
 </body>
-	<script src="Shingeki no kyojin.js"></script>
+	<script src="shingeki no kyojin.js"></script>
 </head>
 </html>
