--- a/animes/jujutsu kaisen/jujutsu kaisen.html
+++ b/animes/jujutsu kaisen/jujutsu kaisen.html
@@ -431,7 +431,7 @@
 					</div>
 				</div>
 				<div class="pie-de-temporada">
-						<p>Arco</p>
+						<p>Arcos: <i>Arco de El Utero Maldito, Arco de el Enfrentamiento con Mahito, Arco de el Festival de Intercambio con Kioto</i></p>
 						<p>Relleno: 0%</p>
 						<p><b>Nota: Formato de Video-MP4</b></p>
 				</div>
@@ -456,7 +456,7 @@
 					</div>
 				</div>
 				<div class="pie-de-temporada">
-						<p>Arco</p>
+						<p>Arcos: <i>Arco de el Recipiente de Plasma Estelar, Arco de El Incidenten de Shibuya</i></p>
 						<p>Relleno: 0%</p>
 						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>worldanimesenpai</b></p>
 				</div>
@@ -483,7 +483,7 @@
 					</div>
 				</div>
 				<div class="pie-de-temporada">
-						<p>Arco</p>
+						<p>Arco: <i>Arco de la Infancia Maldita</i></p>
 						<p>Relleno: 0%</p>
 						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>hackstore.ac</b></p>
 				</div>
