--- a/animes/jujutsu kaisen/jujutsu kaisen.html
+++ b/animes/jujutsu kaisen/jujutsu kaisen.html
@@ -25,6 +25,16 @@
 	<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bangers&family=Berkshire+Swash&family=Bungee+Inline&family=Carter+One&family=Creepster&family=Fredericka+the+Great&family=Fugaz+One&family=Great+Vibes&family=Kaushan+Script&family=Kenia&family=Monoton&family=Sacramento&family=Tangerine&family=Tourney:ital,wght@1,100&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P8PBP72JQ6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P8PBP72JQ6');
+</script>
 <body class="body">
 
 
@@ -440,30 +450,6 @@
 			<div class="container-superior-temporadas">
 				<div class="container-info-temporadas">
 					<div class="poster-temporada">
-						<img src="../../poster/jujutsu kisen.jpg">
-					</div>
-					<a href="" class="link-1-2"></a>
-					<div class="info-temporada">
-						<h3>Temporada: 2</h3>
-						<p>Episodios: 24</p>
-						<p>2023</p>
-						<p>Idioma: Español Latino/Japones</p>
-						<p>Subtitulos-Si: Español Latino</p>
-						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-2">Descargar</button>
-						<button class="boton-descargar-2-lat">Descargar Español Latino</button>
-					</div>
-				</div>
-				<div class="pie-de-temporada">
-						<p>Arcos: <i>Arco de el Recipiente de Plasma Estelar, Arco de El Incidenten de Shibuya</i></p>
-						<p>Relleno: 0%</p>
-						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>worldanimesenpai</b></p>
-				</div>
-			</div>
-			<div class="container-superior-temporadas">
-				<div class="container-info-temporadas">
-					<div class="poster-temporada">
 						<img src="../../poster/jujutsu kaisen 3.jpg">
 					</div>
 					<a href="" class="link-1" target=_blank></a>
@@ -488,6 +474,32 @@
 						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>hackstore.ac</b></p>
 				</div>
 			</div>
+
+			<div class="container-superior-temporadas">
+				<div class="container-info-temporadas">
+					<div class="poster-temporada">
+						<img src="../../poster/jujutsu kisen.jpg">
+					</div>
+					<a href="" class="link-1-2"></a>
+					<div class="info-temporada">
+						<h3>Temporada: 2</h3>
+						<p>Episodios: 24</p>
+						<p>2023</p>
+						<p>Idioma: Español Latino/Japones</p>
+						<p>Subtitulos-Si: Español Latino</p>
+						<p>Calidad: HD-720p</p>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-2">Descargar</button>
+						<button class="boton-descargar-2-lat">Descargar Español Latino</button>
+					</div>
+				</div>
+				<div class="pie-de-temporada">
+						<p>Arcos: <i>Arco de el Recipiente de Plasma Estelar, Arco de El Incidenten de Shibuya</i></p>
+						<p>Relleno: 0%</p>
+						<p>Nota: la contraseña para descomprimir el archivo rar es: <b>worldanimesenpai</b></p>
+				</div>
+			</div>
+			
 
 			
 
@@ -822,8 +834,8 @@
 			<img src="../../iconos png/icons8-instagram-50.png" id="icono-instagram-footer">
 		</div>
 	</footer>
-
+<script src="jujutsu kaisen.js"></script>
 </body>
-	<script src="jujutsu kaisen.js"></script>
-</head>
+	
+
 </html>
