--- a/generos/mecha/mecha.html
+++ b/generos/mecha/mecha.html
@@ -21,6 +21,16 @@
 	<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bangers&family=Berkshire+Swash&family=Bungee+Inline&family=Carter+One&family=Creepster&family=Fredericka+the+Great&family=Fugaz+One&family=Great+Vibes&family=Kaushan+Script&family=Kenia&family=Monoton&family=Sacramento&family=Tangerine&family=Tourney:ital,wght@1,100&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P8PBP72JQ6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P8PBP72JQ6');
+</script>
+
 <body class="body">
 
 	<div class="barra-de-navegacion">
