--- a/listado de animes/listado de animes.html
+++ b/listado de animes/listado de animes.html
@@ -25,6 +25,18 @@
 	
 	<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bangers&family=Berkshire+Swash&family=Bungee+Inline&family=Carter+One&family=Creepster&family=Fredericka+the+Great&family=Fugaz+One&family=Great+Vibes&family=Kaushan+Script&family=Kenia&family=Monoton&family=Sacramento&family=Tangerine&family=Tourney:ital,wght@1,100&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P8PBP72JQ6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P8PBP72JQ6');
+</script>
+
 <body class="body">
 
 	<section class="seccion-de-presentacion-responsive">
@@ -1879,10 +1891,12 @@
 			<img src="../iconos png/icons8-instagram-50.png" id="icono-instagram-footer">
 		</div>
 	</footer>
-
-</body>
 	<script src="listado de animes.js"></script>
-</head>
+</body>
+	
+
+
+
 </html>
 
 
