--- a/animes/tokyo ghoul/tokyo ghoul.html
+++ b/animes/tokyo ghoul/tokyo ghoul.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P8PBP72JQ6"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DX8LLFNSW5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-P8PBP72JQ6');
+  gtag('config', 'G-DX8LLFNSW5');
 </script>
 	<meta charset="utf-8">
 	<meta name="description" content="Descargar Tokyo Ghoul todas las temporadas en Español Latino FACIL, RAPIDO, GRATIS Y SIN ANUNCIOS, en HD Por Mediafire">
