--- a/animes/solo leveling/solo leveling.html
+++ b/animes/solo leveling/solo leveling.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P8PBP72JQ6"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DX8LLFNSW5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-P8PBP72JQ6');
+  gtag('config', 'G-DX8LLFNSW5');
 </script>
 	<meta charset="utf-8">
 	<meta name="description" content="Descargar Solo Leveling FACIL, RAPIDO, GRATIS Y SIN ANUNCIOS, en HD Por Mediafire">
@@ -458,8 +458,8 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mega</P>
-						<button class="boton-descargar-2">proximamente</button>
+						<P>Enlace: </P>
+						<button class="boton-descargar-2">Descargar</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
