--- a/animes/kimetsu no yaiba/kimetsu no yaiba 3.html
+++ b/animes/kimetsu no yaiba/kimetsu no yaiba 3.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DX8LLFNSW5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DX8LLFNSW5');
+</script>
 	<meta charset="utf-8">
 	<meta name="description" content="Descargar Kimetsu No Yaiba temporada 3 en Español Latino FACIL, RAPIDO, GRATIS Y SIN ANUNCIOS, en HD Por Mediafire">
 	<meta name="keywords" content="Animes, Online, Descargar, Español Latino, Sin Anuncios, Gratis, Mediafire, kimetsu no yaiba">
@@ -25,15 +34,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P8PBP72JQ6"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-P8PBP72JQ6');
-</script>
 <body class="body">
 
 
