--- a/animes/kimetsu no yaiba/kimetsu no yaiba.html
+++ b/animes/kimetsu no yaiba/kimetsu no yaiba.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DX8LLFNSW5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DX8LLFNSW5');
+</script>
 	<meta charset="utf-8">
 	<meta name="description" content="Descargar Kimetsu No Yaiba en Español Latino FACIL, RAPIDO, GRATIS Y SIN ANUNCIOS, en HD Y Full HD Por Mediafire">
 	<meta name="keywords" content="Animes, Online, Descargar, Español Latino, Sin Anuncios, Gratis, Mediafire">
@@ -27,15 +36,7 @@
 
 
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P8PBP72JQ6"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-P8PBP72JQ6');
-</script>
 <body class="body">
 
 
