--- a/animes/nanatsu no tazai/nanatsu no tazai 4.html
+++ b/animes/nanatsu no tazai/nanatsu no tazai 4.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DX8LLFNSW5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DX8LLFNSW5');
+</script>
 	<meta charset="utf-8">
 	<meta name="description" content="Descargar Nanatsu No Tazai temporada 4 en Español Latino FACIL, RAPIDO, GRATIS Y SIN ANUNCIOS, en HD Por Mediafire">
 	<meta name="keywords" content="Animes, Online, Descargar, Español Latino, Sin Anuncios, Gratis, Mediafire">
