--- a/error en busqueda/error.html
+++ b/error en busqueda/error.html
@@ -3,13 +3,13 @@
 <html>
 <head>
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P8PBP72JQ6"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DX8LLFNSW5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-P8PBP72JQ6');
+  gtag('config', 'G-DX8LLFNSW5');
 </script>
 	<meta charset="utf-8">
 	<meta name="description" content="Descargar Animes en Español Latino FACIL, RAPIDO, GRATIS Y SIN ANUNCIOS, en HD Y Full HD Por Mediafire, Google Drive y Mega">
@@ -360,7 +360,7 @@
 		
 		<div class="container-text-error">
 			<section class="texto-de-error">
-				<p>Lo Sentimos no se encontraron resultados, puede ser debido a un error en la ortografia o por que no contamos con este Anime en nuestro catalogo. <br>Este sitio esta en estado experimental por el momento, por eso hay solamente 9 animes en el catalogo, pero en los proximos dias se añadiran muchos mas.</p>
+				<p>Lo Sentimos no se encontraron resultados, puede ser debido a un error en la ortografia o por que no contamos con este Anime en nuestro catalogo. <br>Este sitio esta en estado de prueba por el momento, por eso hay solamente 45 animes en el catalogo, pero en los proximos dias se añadiran muchos mas.</p>
 			</section>
 		</div>
 
