--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P8PBP72JQ6"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DX8LLFNSW5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-P8PBP72JQ6');
+  gtag('config', 'G-DX8LLFNSW5');
 </script>
 
 	<meta charset="utf-8">
@@ -285,7 +285,7 @@
 		</div>
 
 		<div class="input">
-			<a class="search-link-responsive" href=""></a>
+			
 			<input type="texto" placeholder="Buscar..." class="input-buscador-responsive">
 				<ul class="lista-de-series-responsive">
 					<div class="item-ul-responsive">
