--- a/animes/solo leveling/solo leveling.html
+++ b/animes/solo leveling/solo leveling.html
@@ -435,14 +435,15 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mega</P>
+						<P>Enlace: Mediafire</P>
 						<button class="boton-descargar-1">Descargar</button>
+						<button class="boton-descargar-1-ligero">Descargar Ligero</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: formato de video MP4</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
@@ -458,14 +459,15 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: </P>
+						<P>Enlace: Mediafire</P>
 						<button class="boton-descargar-2">Descargar</button>
+						<button class="boton-descargar-2-ligero">Descargar Ligero</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: formato de video MP4</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
@@ -481,14 +483,15 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mega</P>
-						<button class="boton-descargar-3">proximamente</button>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-3">Proximamente</button>
+						<button class="boton-descargar-3-ligero">Proximamente Ligero</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: formato de video MP4</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
@@ -504,14 +507,15 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mega</P>
-						<button class="boton-descargar-4">proximamente</button>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-4">Proximamente</button>
+						<button class="boton-descargar-4-ligero">Proximamente Ligero</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: formato de video MP4</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
@@ -527,14 +531,15 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mega</P>
-						<button class="boton-descargar-5">proximamente</button>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-5">Proximamente</button>
+						<button class="boton-descargar-5-ligero">Proximamente Ligero</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: formato de video MP4</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
@@ -550,14 +555,15 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mega</P>
-						<button class="boton-descargar-6">proximamente</button>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-6">Proximamente</button>
+						<button class="boton-descargar-6-ligero">Proximamente Ligero</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: formato de video MP4</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
@@ -573,14 +579,15 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mega</P>
-						<button class="boton-descargar-7">proximamente</button>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-7">Proximamente</button>
+						<button class="boton-descargar-7-ligero">Proximamente Ligero</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: formato de video MP4</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
@@ -596,14 +603,15 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mega</P>
-						<button class="boton-descargar-8">proximamente</button>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-8">Proximamente</button>
+						<button class="boton-descargar-8-ligero">Proximamente Ligero</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: formato de video MP4</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
@@ -619,14 +627,15 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mega</P>
-						<button class="boton-descargar-9">proximamente</button>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-9">Proximamente</button>
+						<button class="boton-descargar-9-ligero">Proximamente Ligero</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: formato de video MP4</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
@@ -642,14 +651,15 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mega</P>
-						<button class="boton-descargar-10">proximamente</button>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-10">Proximamente</button>
+						<button class="boton-descargar-10-ligero">Proximamente Ligero</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: formato de video MP4</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
@@ -665,14 +675,15 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mega</P>
-						<button class="boton-descargar-11">proximamente</button>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-11">Proximamente</button>
+						<button class="boton-descargar-11-ligero">Proximamente Ligero</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: formato de video MP4</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
@@ -688,18 +699,18 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mega</P>
-						<button class="boton-descargar-12">proximamente</button>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-12">Proximamente</button>
+						<button class="boton-descargar-12-ligero">Proximamente Ligero</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: formato de video MP4</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			
-
 			
 			
 		</main>
