--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 		</div>
 
 		<div class="input">
-			
+			<a class="search-link-responsive" href=""></a>
 			<input type="texto" placeholder="Buscar..." class="input-buscador-responsive">
 				<ul class="lista-de-series-responsive">
 					<div class="item-ul-responsive">
@@ -448,7 +448,7 @@
 
 			
 
-			<div class="botones-de-entrada">
+			<div class="botones-de-entrada boton-1">
 				<h2 class="tendencias">Animes Online</h2>
 				<button class="filtross ultimos">ULTIMOS</button>
 				
@@ -457,7 +457,7 @@
 				<button class="filtross estrenos">ESTRENOS</button>
 			</div>
 
-
+			<a href="" class="href-siguiente"></a>
 			<div class="grid-container">
 
 				<div class="grid-item i-1">
@@ -724,7 +724,7 @@
 		
 
 
-			<div class="container-siguiente">
+			<div class="container-siguiente marcar-posicion-1">
 				<button class="siguiente-1">1</button>
 				<button class="siguiente-2">2</button>
 				<button class="siguiente-3">3</button>
