--- a/animes/jujutsu kaisen/jujutsu kaisen 2.html
+++ b/animes/jujutsu kaisen/jujutsu kaisen 2.html
@@ -967,7 +967,7 @@
 						<p>Subtitulos-No</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-23">Proximamente</button>
+						<button class="boton-descargar-23">Descargar</button>
 						
 					</div>
 				</div>
