--- a/animes/goblin slayer/goblin slayer.html
+++ b/animes/goblin slayer/goblin slayer.html
@@ -457,8 +457,9 @@
 						<p>Idioma: Español Latino</p>
 						<p>Subtitulos-No</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
+						<P>Enlace: Mediafire y Goggle Drive</P>
 						<button class="boton-descargar-2">Descargar</button>
+						<button class="boton-descargar-2-drive">Descargar Google Drive</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
