--- a/animes/solo leveling/solo leveling.html
+++ b/animes/solo leveling/solo leveling.html
@@ -435,9 +435,10 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
+						<P>Enlace: Mediafire y Google Drive</P>
 						<button class="boton-descargar-1">Descargar</button>
 						<button class="boton-descargar-1-ligero">Descargar Ligero</button>
+						<button class="boton-descargar-1-drive">Descargar Google Drive</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
@@ -459,9 +460,10 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
+						<P>Enlace: Mediafire y Google Drive</P>
 						<button class="boton-descargar-2">Descargar</button>
 						<button class="boton-descargar-2-ligero">Descargar Ligero</button>
+						<button class="boton-descargar-2-drive">Descargar Google Drive</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
@@ -484,8 +486,9 @@
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-3">Proximamente</button>
-						<button class="boton-descargar-3-ligero">Proximamente Ligero</button>
+						<button class="boton-descargar-3">Descargar</button>
+						<button class="boton-descargar-3-ligero">Descargar Ligero</button>
+						<button class="boton-descargar-3-drive">Descargar Google Drive</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
