--- a/secciones/cuarta/cuarta.html
+++ b/secciones/cuarta/cuarta.html
@@ -24,7 +24,7 @@
 	
 	
 	<title>Full Anime | Descargar Animes en Español Latino por Mediafire</title>
-	<link rel="stylesheet" type="text/css" href="destacados.css">
+	<link rel="stylesheet" type="text/css" href="cuarta.css">
 	<link rel="stylesheet" type="text/css" href="../../normalize.css">
 	<link rel="stylesheet" type="text/css" href="../../icons/css/iconset.css">
 	<link rel="stylesheet" type="text/css" href="../../icons2/css/fontello.css">
@@ -54,10 +54,10 @@
 				
 			</div>
 	</div>
-	<a class="chainsaw-link" href="../../animes/Shingeki No Kyojin/shingeki no kyojin.html"></a>
-	<a class="attack-link" href="../../animes/jujutsu kaisen/jujutsu kaisen.html"></a>
-	<a class="jujutsu-link" href="../../animes/my hero academia/my hero academia.html"></a>
-	<a class="kimetsu-link" href="../../animes/kimetsu no yaiba/kimetsu no yaiba.html"></a>
+	<a class="chainsaw-link" href="../../animes/bleach thousand year/bleach thousand year.html"></a>
+	<a class="attack-link" href="../../animes/mushoku tensei/mushoku tensei.html"></a>
+	<a class="jujutsu-link" href="../../animes/zom 100/zom 100.html"></a>
+	<a class="kimetsu-link" href="../../animes/black clover/black clover.html"></a>
 
 
 
@@ -129,7 +129,7 @@
 			<input type="texto" name="input-buscador" placeholder="Buscar..." class="input-buscador">
 
 						
-		<ul class="lista-de-series">
+	<ul class="lista-de-series">
 				<div class="item-ul">
 				<button class="series" id="data-serie-0"><div class="img-ul"><img src="../../poster/chainsaw man poster.jpg"></div><div class="text-ul">Chainsaw Man</div></button>
 
@@ -787,7 +787,7 @@
 		
 
 
-		<div class="container-siguiente marcar-posicion-1">
+			<div class="container-siguiente marcar-posicion-1">
 				<button class="siguiente-1">1</button>
 				<button class="siguiente-2">2</button>
 				<button class="siguiente-3">3</button>
@@ -1265,7 +1265,7 @@
 
 
 	
-<script src="destacados.js"></script>
+<script src="cuarta.js"></script>
 </body>
 	
 
