--- a/animes/edens zero/edens zero.html
+++ b/animes/edens zero/edens zero.html
@@ -758,7 +758,7 @@
 
 	<div class="parrafo-final">
 				<p>
-					Este nuevo shonen creado por el mangaka que dio forma a Fairy Tail (pronto estara disponible en Full-Anime), ha usado los diseños que tenia de esta ultima serie, ha creado "nuevos personajes" con estos diseños y los ha metido en una aventura espacial la cual es bastante divertida de ver.
+					Este nuevo shonen creado por el mangaka que dio forma a Fairy Tail, ha usado los diseños que tenia de esta ultima serie, ha creado "nuevos personajes" con estos diseños y los ha metido en una aventura espacial la cual es bastante divertida de ver.
 				</p>
 		</div>
 
