--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	<meta property="og:title" content="Full Anime">
 	<meta property="og:descrption" content="En este sitio puedes descargar Animes en Español Latino gratis">
 	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://full-anime.github.io/">
+	<meta property="og:image" content="https://full-anime.github.io/poster/jujutsu kisen.jpg">
 	
 	
 	<title>Full Anime | Descargar Animes en Español Latino por Mediafire</title>
