--- a/animes/Shingeki No Kyojin/shingeki no kyojin.html
+++ b/animes/Shingeki No Kyojin/shingeki no kyojin.html
@@ -545,13 +545,14 @@
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
 						<button class="boton-descargar-2">Descargar</button>
-						<p>Nota: La contraseña para descomprimir los archivos rar es: <b>www.cinestentativos.com</b></p>
+						<button class="boton-descargar-2-2">Descargar opcion 2</button>
+						
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p><b>Nota: formato de video MP4</b></p>
+						<p>Nota: La contraseña para descomprimir los archivos rar es: <b>www.cinestentativos.com</b></p>
 				</div>
 			</div>
 			
