--- a/animes/mashle/mashle 2.html
+++ b/animes/mashle/mashle 2.html
@@ -482,36 +482,13 @@
 		<main class="main">
 				<div class="div-grid-h2"><h2>Temporada 2</h2></div>
 			
+			
 			<div class="container-superior-temporadas">
 				<div class="container-info-temporadas">
 					<div class="poster-temporada">
 						<img src="../../poster/mashle 2.jpeg">
 					</div>
 					<a href="" class="link-1" target="_blank"></a>
-					<div class="info-temporada">
-						<h3>Episodios 1</h3>
-						<p>Duracion: 23m</p>
-						<p>2024</p>
-						<p>Idioma: Japones</p>
-						<p>Subtitulos-Si: Español latino</p>
-						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire y Google Drive</P>
-						<button class="boton-descargar-1">Descargar</button>
-						<button class="boton-descargar-1-ligero">Descargar Opcion 2</button>
-					</div>
-				</div>
-				<div class="pie-de-temporada">
-						<p>Arco</p>
-						<p>Relleno: 0%</p>
-						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
-				</div>
-			</div>
-			<div class="container-superior-temporadas">
-				<div class="container-info-temporadas">
-					<div class="poster-temporada">
-						<img src="../../poster/mashle 2.jpeg">
-					</div>
-					
 					<div class="info-temporada">
 						<h3>Episodio 1</h3>
 						<p>Duracion: 23m</p>
@@ -521,7 +498,7 @@
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire y Google Drive</P>
 						<button class="boton-descargar-1">Descargar</button>
-						<button class="boton-descargar-1-ligero">Descargar Opcion 2</button>
+						<button class="boton-descargar-1-ligero">Descargar Drive</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
@@ -545,7 +522,7 @@
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire y Google Drive</P>
 						<button class="boton-descargar-2">Descargar</button>
-						<button class="boton-descargar-2-ligero">Descargar Opcion 2</button>
+						<button class="boton-descargar-2-ligero">Descargar Drive</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
@@ -569,7 +546,7 @@
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire y Google Drive</P>
 						<button class="boton-descargar-3">Descargar</button>
-						<button class="boton-descargar-3-ligero">Descargar Opcion 2</button>
+						<button class="boton-descargar-3-ligero">Descargar Drive</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
@@ -592,8 +569,8 @@
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire y Google Drive</P>
-						<button class="boton-descargar-4">Proximamente</button>
-						<button class="boton-descargar-4-ligero">Proximamente Opcion 2</button>
+						<button class="boton-descargar-4">Descargar</button>
+						<button class="boton-descargar-4-ligero">Descargar Drive</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
@@ -616,8 +593,8 @@
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire y Google Drive</P>
-						<button class="boton-descargar-5">Proximamente</button>
-						<button class="boton-descargar-5-ligero">Proximamente Opcion 2</button>
+						<button class="boton-descargar-5">Descargar</button>
+						<button class="boton-descargar-5-ligero">Descargar Drive</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
