--- a/animes/mashle/mashle.html
+++ b/animes/mashle/mashle.html
@@ -520,7 +520,7 @@
 						<p>Subtitulos-Si: Español Latino</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-2">Descargar</button>
+						<button class="boton-descargar-2">Descargar Japones/Sub</button>
 						<button class="boton-descargar-2-lat">Descargar Español Latino</button>
 						
 					</div>
