--- a/animes/solo leveling/solo leveling.html
+++ b/animes/solo leveling/solo leveling.html
@@ -492,11 +492,11 @@
 						<h3>Episodio 1</h3>
 						<p>Duracion: 24m</p>
 						<p>2024</p>
-						<p>Idioma: Japones</p>
+						<p>Idioma: Español Latino/Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-1">Descargar</button>
+						<P>Enlace: Mediafire Google Drive</P>
+						<button class="boton-descargar-1">Descargar Drive</button>
 						<button class="boton-descargar-1-lat">Descargar Español Latino</button>
 					</div>
 				</div>
@@ -516,11 +516,11 @@
 						<h3>Episodio 2</h3>
 						<p>Duracion: 24m</p>
 						<p>2024</p>
-						<p>Idioma: Japones</p>
+						<p>Idioma: Español Latino/Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-2">Descargar</button>
+						<P>Enlace: Mediafire Google Drive</P>
+						<button class="boton-descargar-2">Descargar Drive</button>
 						<button class="boton-descargar-2-lat">Descargar Español Latino</button>
 					</div>
 				</div>
@@ -540,12 +540,12 @@
 						<h3>Episodio 3</h3>
 						<p>Duracion: 24m</p>
 						<p>2024</p>
-						<p>Idioma: Japones</p>
+						<p>Idioma: Español Latino/Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-3">Descargar</button>
-						<button class="boton-descargar-3-lat">Proximamente Español Latino</button>
+						<P>Enlace: Mediafire Google Drive</P>
+						<button class="boton-descargar-3">Descargar Drive</button>
+						<button class="boton-descargar-3-lat">Descargar Español Latino</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
@@ -567,8 +567,8 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-4">Proximamente</button>
+						<P>Enlace: Mediafire Google Drive</P>
+						<button class="boton-descargar-4">Descargar Drive</button>
 						
 						<button class="boton-descargar-4-lat">Proximamente Español Latino</button>
 					</div>
@@ -592,8 +592,8 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-5">Proximamente</button>
+						<P>Enlace: Mediafire Google Drive</P>
+						<button class="boton-descargar-5">Descargar Drive</button>
 						
 						<button class="boton-descargar-5-lat">Proximamente Español Latino</button>
 					</div>
