--- a/animes/mashle/mashle 2 lat.html
+++ b/animes/mashle/mashle 2 lat.html
@@ -520,8 +520,8 @@
 						<p>Subtitulos-No</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-2-1">Proximamente Opcion 1</button>
-						<button class="boton-descargar-2-2">Proximamente Opcion 2</button>
+						<button class="boton-descargar-2-1">Descargar Opcion 1</button>
+						<button class="boton-descargar-2-2">Descargar Opcion 2</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
