--- a/secciones/quinta/quinta.html
+++ b/secciones/quinta/quinta.html
@@ -24,7 +24,7 @@
 	
 	
 	<title>Full Anime | Descargar Animes en Español Latino por Mediafire</title>
-	<link rel="stylesheet" type="text/css" href="tercera.css">
+	<link rel="stylesheet" type="text/css" href="quinta.css">
 	<link rel="stylesheet" type="text/css" href="../../normalize.css">
 	<link rel="stylesheet" type="text/css" href="../../icons/css/iconset.css">
 	<link rel="stylesheet" type="text/css" href="../../icons2/css/fontello.css">
@@ -54,10 +54,10 @@
 				
 			</div>
 	</div>
-	<a class="chainsaw-link" href="../../animes/sono bisque/sono Bisque.html"></a>
-	<a class="attack-link" href="../../animes/mashle/mashle.html"></a>
-	<a class="jujutsu-link" href="../../animes/blue lock/blue lock.html"></a>
-	<a class="kimetsu-link" href="../../animes/oshi no ko/oshi no ko.html"></a>
+	<a class="chainsaw-link" href="../../animes/evangelion/evangelion.html"></a>
+	<a class="attack-link" href="../../animes/tower of god/tower of god.html"></a>
+	<a class="jujutsu-link" href="../../animes/uzaki chan/uzaki chan.html"></a>
+	<a class="kimetsu-link" href="../../animes/overlord/overlord.html"></a>
 
 
 
@@ -105,7 +105,7 @@
 		</div>
 
 
-		
+	
 		<div class="opciones-de-barra">
 			<div class="div-1">
 				<div>
@@ -1437,7 +1437,7 @@
 
 
 	
-<script src="tercera.js"></script>
+<script src="quinta.js"></script>
 </body>
 	
 
