--- a/animes/one piece film red/one piece film red.html
+++ b/animes/one piece film red/one piece film red.html
@@ -676,7 +676,7 @@
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p><b>Nota: Formato de video-MP4</b></p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>www.locuranime.com</b>
 				</div>
 			</div>
 
