--- a/animes/kimetsu no yaiba/kimetsu no yaiba.html
+++ b/animes/kimetsu no yaiba/kimetsu no yaiba.html
@@ -665,12 +665,13 @@
 						<h3>To The Hashira Training</h3>
 						<p>Duracion: 1h</p>
 						<p>2024-2-23</p>
-						<p>Idioma: Español Latino y Japones</p>
-						<p>Subtitulos-Si: Español Latino</p>
-						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
+						<p>Idioma: Español Latino</p>
+						<p>Subtitulos-No</p>
+						<p>Calidad: CAMRIP</p>
+						<P>Enlace: Mega</P>
 						<div class="div-d-b">
-							<button class="boton-descargar-4">Proximamente</button>
+							<button class="boton-descargar-4-1">Descargar</button>
+							<button class="boton-descargar-4-2">Descargar Mega</button>
 							
 						</div>
 					
