--- a/animes/hellsing/hellsing.html
+++ b/animes/hellsing/hellsing.html
@@ -23,7 +23,7 @@
 
 
 	<title>Descargar Hellsing HD | Español Latino</title>
-	<link rel="stylesheet" type="text/css" href="Hellsing.css">
+	<link rel="stylesheet" type="text/css" href="hellsing.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="../../icons/css/iconset.css">
 	<link rel="stylesheet" type="text/css" href="../../icons2/css/fontello.css">
@@ -1058,7 +1058,7 @@
 			<img src="../../iconos png/icons8-instagram-50.png" id="icono-instagram-footer">
 		</div>
 	</footer>
-<script src="Hellsing.js"></script>
+<script src="hellsing.js"></script>
 </body>
 	
 
