--- a/animes/my hero academia peliculas/my hero academia peliculas.html
+++ b/animes/my hero academia peliculas/my hero academia peliculas.html
@@ -23,7 +23,7 @@
 
 
 	<title>Descargar My Hero Academia Peliculas HD | Español Latino</title>
-	<link rel="stylesheet" type="text/css" href="my hero academia Peliculas.css">
+	<link rel="stylesheet" type="text/css" href="my hero academia peliculas.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="../../icons/css/iconset.css">
 	<link rel="stylesheet" type="text/css" href="../../icons2/css/fontello.css">
@@ -1056,7 +1056,7 @@
 			<img src="../../iconos png/icons8-instagram-50.png" id="icono-instagram-footer">
 		</div>
 	</footer>
-<script src="my hero academia Peliculas.js"></script>
+<script src="my hero academia peliculas.js"></script>
 </body>
 	
 
