--- a/animes/classroom of the elite/classroom of the elite 3.html
+++ b/animes/classroom of the elite/classroom of the elite 3.html
@@ -767,7 +767,7 @@
 						<p>Subtitulos-Si</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-5">Proximamente</button>
+						<button class="boton-descargar-5">Descargar</button>
 						<button class="boton-descargar-5-1">Descargar Japones</button>
 					</div>
 				</div>
@@ -840,6 +840,7 @@
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
 						<button class="boton-descargar-8">Proximamente</button>
+						<button class="boton-descargar-8-1">Descargar Japones</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
